Update the follow path to add support for looped paths